<resources>
    <string name="app_name">Online Dental Clinic</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_record">Record</string>
    <string name="title_sales">Sales</string>
    <string name="title_odontograms">Help</string>
    <string name="title_account">Account</string>
    <string name="button_register_me">Register me</string>
    <string name="textView_email">email</string>
    <string name="button_login">Login</string>
    <string name="textView_password">password</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_view">View</string>
    <string name="textView_clinic">Clinic</string>
    <string name="textView_patient">Patient</string>
    <string name="textView_dentist">Dentist</string>
    <string name="textView_service">Service</string>
    <string name="textView_date">Date</string>
    <string name="textView_hour">Hour</string>
    <string name="button_create_appointments">Create Appointment</string>
    <string name="textView_select_item">Select an item</string>
    <string name="textView_general_error">incorrect email or password</string>
    <string name="textView_password_error">enter your password</string>
    <string name="text_email_error">enter your email</string>
    <string name="textView_Invalid_email">Invalid email</string>
    <string name="textView_name">Name</string>
    <string name="textView_clinic_address">Clinic address</string>
    <string name="textView_attention_hours">Attention hour</string>
    <string name="button_save">Save</string>
    <string name="textView_dentist_specialty">Specialty</string>
    <string name="textView_description">Description</string>
    <string name="textView_cost">Cost</string>
    <string name="textView_age">Age</string>
    <string name="textView_reason_consultation">Reason for consultation</string>
    <string name="textView_birthplace">Birthplace</string>
    <string name="textView_birthday">Birthday</string>
    <string name="textView_travels">Travels</string>
    <string name="textView_phone">Phone</string>
    <string name="button_next">Next</string>
    <string name="textView_sick_time">Sick time</string>
    <string name="textView_signs_symptoms">Signs symptoms</string>
    <string name="textView_biological_functions">Biological functions</string>
    <string name="textView_personal_history">Personal history</string>
    <string name="textView_background_family">Background family</string>
    <string name="textView_vital_signs">Vital signs</string>
    <string name="textView_general_clinic_examination">General clinic examination</string>
    <string name="textView_odontostomatological_exam">Odontostomatological exam</string>
    <string name="textView_presumptive_diagnosis">Presumptive diagnosis</string>
    <string name="textView_treatment_plan">Treatment plan</string>
    <string name="textView_control_evolution">Control and evolution</string>
    <string name="textView_patient_discharge">Patient discharge</string>
    <string name="button_anamnasis">Anamnasis</string>
    <string name="button_medical_consultation">Medical consultation</string>
    <string name="button_current_illness">Current illness</string>
    <string name="button_background">Background</string>
    <string name="button_clinic_examination">Clinic examination</string>
    <string name="button_diagnosis">Diagnosis</string>
    <string name="button_treatment_plan">Treatment plan</string>
    <string name="button_control_evolution">Control and evolution</string>
    <string name="button_patient_discharge">Patient discharge</string>
    <string name="button_ok">OK</string>
    <string name="dental_piece">Dental piece</string>
    <string name="button_create">Create</string>
</resources>
