<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_appointments">

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.AppointmentFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.DentalRecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_odontograms"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.OdontogramFragment"
        android:label="@string/title_odontograms"
        tools:layout="@layout/fragment_odontograms" />

    <fragment
        android:id="@+id/navigation_sales"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.SalesFragment"
        android:label="@string/title_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/create_appointments"
        android:name="com.healthapps.onlinedentalclinic.controllers.fragments.CreateAppointmentFragment"
        android:label="@string/button_create_appointments" />
</navigation>